--- a/package.json
+++ b/package.json
@@ -19,10 +19,11 @@
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^4.0.8",
     "react-scripts": "1.1.0",
+    "recharts": "^1.0.0-beta.9",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
-    "rjx": "^1.2.3",
+    "rjx": "^1.4.1",
     "semantic-ui-css": "^2.2.12",
     "semantic-ui-react": "^0.77.2"
   },
