--- a/package.json
+++ b/package.json
@@ -1,35 +1,33 @@
 {
-  "name": "pwax",
-  "version": "0.0.1",
+  "name": "viewx",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
-    "animate.css": "^3.5.2",
-    "capitalize": "^1.0.0",
-    "history": "^4.7.2",
-    "json6": "^1.0.3",
-    "moment": "^2.20.1",
-    "numeral": "^2.0.6",
-    "pluralize": "^7.0.0",
-    "react": "^16.2.0",
-    "react-codemirror": "^1.0.0",
-    "react-dom": "^16.2.0",
-    "react-redux": "^5.0.6",
-    "react-router": "^4.2.0",
-    "react-router-config": "^1.0.0-beta.4",
-    "react-router-dom": "^4.2.2",
-    "react-router-redux": "^4.0.8",
-    "react-scripts": "1.1.0",
-    "recharts": "^1.0.0-beta.9",
-    "redux": "^3.7.2",
-    "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.2.0",
-    "rjx": "^1.4.1",
-    "semantic-ui-css": "^2.2.12",
-    "semantic-ui-react": "^0.77.2"
+    "jsonx": "^0.9.5",
+    "react": "^16.10.0",
+    "react-dom": "^16.10.0",
+    "react-hooks-global-state": "^0.15.0",
+    "react-scripts": "3.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
+    "test": "react-scripts test",
     "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
