--- a/package.json
+++ b/package.json
@@ -4,10 +4,14 @@
   "private": true,
   "dependencies": {
     "jsonx": "^0.9.5",
+    "promisie": "^2.0.0-alpha.0",
     "react": "^16.10.0",
     "react-dom": "^16.10.0",
     "react-hooks-global-state": "^0.15.0",
-    "react-scripts": "3.1.2"
+    "react-router": "^5.1.1",
+    "react-router-dom": "^5.1.1",
+    "react-scripts": "3.1.2",
+    "test-matching-route": "^1.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -29,5 +33,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-dom": "^16.9.1",
+    "@types/react-router": "^5.1.1",
+    "@types/react-router-dom": "^5.1.0",
+    "typescript": "^3.6.3"
   }
 }
