--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "jsonx": "^0.9.7",
+    "path-to-regexp": "^3.1.0",
     "promisie": "^2.0.0-alpha.0",
     "react": "^16.10.0",
     "react-dom": "^16.10.0",
