--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
-  "name": "viewx",
-  "version": "0.1.0",
-  "private": true,
+  "name": "@viewx/vxa",
+  "version": "0.0.1",
+  "main": "dist/viewx.vma.cjs.js",
+  "module": "dist/viewx.vma.es.js",
+  "browser": "dist/viewx.vma.umd.js",
+  "web": "dist/viewx.vma.web.js",
   "dependencies": {
     "jsonx": "^0.9.7",
     "path-to-regexp": "^3.1.0",
@@ -12,9 +15,15 @@
     "react-router": "^5.1.1",
     "react-router-dom": "^5.1.1",
     "react-scripts": "3.1.2",
+    "rollup-plugin-commonjs": "^10.1.0",
+    "rollup-plugin-node-builtins": "^2.1.2",
+    "rollup-plugin-node-globals": "^1.4.0",
+    "rollup-plugin-node-resolve": "^5.2.0",
     "test-matching-route": "^1.2.0"
   },
   "scripts": {
+    "compile": "rollup -c",
+    "watch": "rollup -cw",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -39,6 +48,11 @@
     "@types/react-dom": "^16.9.1",
     "@types/react-router": "^5.1.1",
     "@types/react-router-dom": "^5.1.0",
-    "typescript": "^3.6.3"
+    "rollup": "^1.23.0",
+    "rollup-plugin-replace": "^2.2.0",
+    "rollup-plugin-terser-js": "^1.0.2",
+    "rollup-plugin-typescript": "^1.0.1",
+    "typescript": "^3.6.3",
+    "typings": "^2.1.1"
   }
 }
