--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "rollup-plugin-node-builtins": "^2.1.2",
     "rollup-plugin-node-globals": "^1.4.0",
     "rollup-plugin-node-resolve": "^5.2.0",
+    "simple-socket-router": "^0.9.3",
     "store2": "^2.10.0",
     "test-matching-route": "^1.2.0"
   },
