--- a/package.json
+++ b/package.json
@@ -14,11 +14,6 @@
     "react-hooks-global-state": "^0.15.0",
     "react-router": "^5.1.1",
     "react-router-dom": "^5.1.1",
-    "react-scripts": "3.1.2",
-    "rollup-plugin-commonjs": "^10.1.0",
-    "rollup-plugin-node-builtins": "^2.1.2",
-    "rollup-plugin-node-globals": "^1.4.0",
-    "rollup-plugin-node-resolve": "^5.2.0",
     "simple-socket-router": "^0.9.3",
     "store2": "^2.10.0",
     "test-matching-route": "^1.2.0"
@@ -50,10 +45,15 @@
     "@types/react-dom": "^16.9.1",
     "@types/react-router": "^5.1.1",
     "@types/react-router-dom": "^5.1.0",
+    "react-scripts": "^3.2.0",
     "rollup": "^1.23.0",
     "rollup-plugin-replace": "^2.2.0",
     "rollup-plugin-terser-js": "^1.0.2",
     "rollup-plugin-typescript": "^1.0.1",
+    "rollup-plugin-commonjs": "^10.1.0",
+    "rollup-plugin-node-builtins": "^2.1.2",
+    "rollup-plugin-node-globals": "^1.4.0",
+    "rollup-plugin-node-resolve": "^5.2.0",
     "typescript": "^3.6.3",
     "typings": "^2.1.1"
   }
