--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@viewx/vxa",
-  "version": "0.0.9",
+  "version": "0.1.0",
   "main": "dist/viewx.vma.cjs.js",
   "module": "dist/viewx.vma.es.js",
   "browser": "dist/viewx.vma.umd.js",
@@ -24,6 +24,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "coverage": "npm test -- --coverage",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -41,19 +42,39 @@
       "last 1 safari version"
     ]
   },
+  "jest": {
+    "transform": {
+      "^.+\\.jsx$": "babel-jest",
+      "^.+\\.js$": "babel-jest",
+      "^.+\\.mjs$": "ts-jest",
+      "^.+\\.tsx?$": "ts-jest",
+      "^.+\\.ts?$": "ts-jest"
+    },
+    "transformIgnorePatterns": [
+      "node_modules/(?!(jsonx|use-global-hook|test-matching-route|simple-socket-router)/)"
+    ]
+
+  },
   "devDependencies": {
+    "@types/enzyme": "^3.10.3",
+    "@types/enzyme-adapter-react-16": "^1.0.5",
+    "@types/jest": "^24.0.19",
     "@types/react-dom": "^16.9.1",
     "@types/react-router": "^5.1.1",
     "@types/react-router-dom": "^5.1.0",
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.15.1",
+    "jest": "^24.9.0",
     "react-scripts": "^3.2.0",
     "rollup": "^1.23.0",
-    "rollup-plugin-replace": "^2.2.0",
-    "rollup-plugin-terser-js": "^1.0.2",
-    "rollup-plugin-typescript": "^1.0.1",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-node-builtins": "^2.1.2",
     "rollup-plugin-node-globals": "^1.4.0",
     "rollup-plugin-node-resolve": "^5.2.0",
+    "rollup-plugin-replace": "^2.2.0",
+    "rollup-plugin-terser-js": "^1.0.2",
+    "rollup-plugin-typescript": "^1.0.1",
+    "ts-jest": "^24.1.0",
     "typescript": "^3.6.3",
     "typings": "^2.1.1"
   }
