--- a/package.json
+++ b/package.json
@@ -6,14 +6,17 @@
   "browser": "dist/viewx.vma.umd.js",
   "web": "dist/viewx.vma.web.js",
   "dependencies": {
-    "jsonx": "^0.9.87",
+    "@types/hoist-non-react-statics": "^3.3.1",
+    "@types/memory-cache": "^0.2.0",
+    "hoist-non-react-statics": "^3.3.1",
+    "jsonx": "^0.9.900",
     "path-to-regexp": "^3.1.0",
     "promisie": "^2.0.0-alpha.0",
-    "react": "^16.10.0",
-    "react-dom": "^16.10.0",
-    "react-hooks-global-state": "^0.15.0",
-    "react-router": "^5.1.1",
-    "react-router-dom": "^5.1.1",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "react-hooks-global-state": "^0.16.0",
+    "react-router": "^5.1.2",
+    "react-router-dom": "^5.1.2",
     "simple-socket-router": "^1.0.0",
     "store2": "^2.10.0",
     "test-matching-route": "^2.0.0"
