--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "@viewx/vxa",
-  "version": "0.2.2",
-  "main": "dist/viewx.vma.cjs.js",
-  "module": "dist/viewx.vma.es.js",
-  "browser": "dist/viewx.vma.umd.js",
-  "web": "dist/viewx.vma.web.js",
+  "version": "0.2.3",
+  "main": "dist/viewx.vxa.cjs.js",
+  "module": "dist/viewx.vxa.es.js",
+  "browser": "dist/viewx.vxa.umd.js",
+  "web": "dist/viewx.vxa.web.js",
   "dependencies": {
     "hoist-non-react-statics": "^3.3.1",
     "jsonx": "^1.0.0",
