--- a/package.json
+++ b/package.json
@@ -58,16 +58,16 @@
   "devDependencies": {
     "@types/enzyme": "3.10.4",
     "@types/enzyme-adapter-react-16": "1.0.5",
+    "@types/hoist-non-react-statics": "3.3.1",
     "@types/jest": "24.0.23",
+    "@types/memory-cache": "0.2.0",
     "@types/react-dom": "16.9.4",
     "@types/react-router": "5.1.3",
     "@types/react-router-dom": "5.1.3",
-    "@types/hoist-non-react-statics": "3.3.1",
-    "@types/memory-cache": "0.2.0",
     "enzyme": "3.10.0",
     "enzyme-adapter-react-16": "1.15.1",
     "jest": "24.9.0",
-    "react-scripts": "3.3.0",
+    "react-scripts": "^3.4.0",
     "rollup": "1.27.9",
     "rollup-plugin-commonjs": "10.1.0",
     "rollup-plugin-node-builtins": "2.1.2",
