--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
   "name": "@viewx/vxa",
-  "version": "0.4.1",
+  "version": "0.5.0",
   "main": "dist/viewx.vxa.cjs.js",
   "module": "dist/viewx.vxa.es.js",
   "browser": "dist/viewx.vxa.umd.js",
   "web": "dist/viewx.vxa.web.js",
   "dependencies": {
-    "hoist-non-react-statics": "^3.3.1",
+    "hoist-non-react-statics": "^3.3.2",
     "jsonx": "^1.0.0",
     "path-to-regexp": "^6.0.0",
     "promisie": "^2.0.0-alpha.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-hooks-global-state": "^0.16.0",
+    "react-hooks-global-state": "^1.0.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "simple-socket-router": "^1.0.0",
@@ -56,19 +56,18 @@
     ]
   },
   "devDependencies": {
-    "@types/enzyme": "3.10.4",
-    "@types/enzyme-adapter-react-16": "1.0.5",
+    "@types/enzyme": "^3.10.5",
+    "@types/enzyme-adapter-react-16": "^1.0.6",
     "@types/hoist-non-react-statics": "3.3.1",
-    "@types/jest": "24.0.23",
+    "@types/jest": "^25.1.3",
     "@types/memory-cache": "0.2.0",
-    "@types/react-dom": "16.9.4",
-    "@types/react-router": "5.1.3",
+    "@types/react-dom": "^16.9.5",
+    "@types/react-router": "^5.1.4",
     "@types/react-router-dom": "5.1.3",
-    "enzyme": "3.10.0",
-    "enzyme-adapter-react-16": "1.15.1",
-    "jest": "24.9.0",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
     "react-scripts": "^3.4.0",
-    "rollup": "1.27.9",
+    "rollup": "^1.31.1",
     "rollup-plugin-commonjs": "10.1.0",
     "rollup-plugin-node-builtins": "2.1.2",
     "rollup-plugin-node-globals": "1.4.0",
@@ -76,8 +75,8 @@
     "rollup-plugin-replace": "2.2.0",
     "rollup-plugin-terser-js": "1.0.2",
     "rollup-plugin-typescript": "1.0.1",
-    "ts-jest": "24.2.0",
-    "typescript": "3.7.3",
+    "ts-jest": "^25.2.1",
+    "typescript": "^3.8.2",
     "typings": "2.1.1"
   },
   "repository": {
@@ -89,6 +88,6 @@
     "url": "https://github.com/repetere/viewx-app/issues"
   },
   "engines": {
-    "node": ">=10"
+    "node": ">=13"
   }
 }
