--- a/package.json
+++ b/package.json
@@ -60,7 +60,9 @@
     "@types/enzyme-adapter-react-16": "^1.0.6",
     "@types/hoist-non-react-statics": "3.3.1",
     "@types/jest": "^25.1.3",
+    "@types/luxon": "^1.21.0",
     "@types/memory-cache": "0.2.0",
+    "@types/numeral": "0.0.26",
     "@types/react-dom": "^16.9.5",
     "@types/react-router": "^5.1.4",
     "@types/react-router-dom": "5.1.3",
