--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
   "web": "dist/viewx.vxa.web.js",
   "dependencies": {
     "hoist-non-react-statics": "^3.3.2",
-    "jsonx": "^1.2.0",
+    "jsonx": "^1.3.6",
     "path-to-regexp": "^6.0.0",
-    "promisie": "^2.0.0-alpha.0",
+    "promisie": "^3.0.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-hooks-global-state": "^1.0.0",
@@ -56,6 +56,7 @@
     ]
   },
   "devDependencies": {
+    "@types/chai": "^4.2.11",
     "@types/enzyme": "3.10.5",
     "@types/enzyme-adapter-react-16": "1.0.6",
     "@types/hoist-non-react-statics": "3.3.1",
@@ -66,6 +67,7 @@
     "@types/react-dom": "16.9.5",
     "@types/react-router": "5.1.4",
     "@types/react-router-dom": "5.1.3",
+    "chai": "^4.2.0",
     "enzyme": "3.11.0",
     "enzyme-adapter-react-16": "1.15.2",
     "react-scripts": "3.4.1",
@@ -78,6 +80,7 @@
     "rollup-plugin-terser-js": "1.0.2",
     "rollup-plugin-typescript": "1.0.1",
     "ts-jest": "25.2.1",
+    "tslib": "^1.11.1",
     "typescript": "3.8.3",
     "typings": "2.1.1"
   },
