--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "web": "dist/viewx.vxa.web.js",
   "dependencies": {
     "hoist-non-react-statics": "^3.3.2",
-    "jsonx": "^1.3.6",
+    "jsonx": "^1.4.1",
     "path-to-regexp": "^6.0.0",
     "promisie": "^3.0.0",
     "react": "^16.12.0",
@@ -52,7 +52,7 @@
       "^.+\\.ts?$": "ts-jest"
     },
     "transformIgnorePatterns": [
-      "node_modules/(?!(jsonx|use-global-hook|test-matching-route|simple-socket-router)/)"
+      "node_modules/(?!(use-global-hook|test-matching-route|simple-socket-router)/)"
     ]
   },
   "devDependencies": {
@@ -67,6 +67,7 @@
     "@types/react-dom": "16.9.5",
     "@types/react-router": "5.1.4",
     "@types/react-router-dom": "5.1.3",
+    "@types/ua-parser-js": "^0.7.33",
     "chai": "^4.2.0",
     "enzyme": "3.11.0",
     "enzyme-adapter-react-16": "1.15.2",
