--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "jsonx": "^1.4.1",
     "path-to-regexp": "^6.0.0",
     "promisie": "^3.0.0",
-    "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-hooks-global-state": "^1.0.0",
     "react-router": "^5.1.2",
@@ -52,7 +51,7 @@
       "^.+\\.ts?$": "ts-jest"
     },
     "transformIgnorePatterns": [
-      "node_modules/(?!(use-global-hook|test-matching-route|simple-socket-router)/)"
+      "node_modules/(?!(jsonx|use-global-hook|test-matching-route|simple-socket-router)/)"
     ]
   },
   "devDependencies": {
