--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
   "name": "@viewx/vxa",
-  "version": "0.6.3",
+  "version": "0.6.5",
   "main": "dist/viewx.vxa.cjs.js",
   "module": "dist/viewx.vxa.es.js",
   "browser": "dist/viewx.vxa.umd.js",
   "web": "dist/viewx.vxa.web.js",
   "dependencies": {
     "hoist-non-react-statics": "^3.3.2",
-    "jsonx": "^1.4.1",
+    "jsonx": "^1.4.3",
     "path-to-regexp": "^6.0.0",
     "promisie": "^3.0.0",
-    "react-dom": "^16.12.0",
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
     "react-hooks-global-state": "^1.0.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
