--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "module": "dist/viewx.vxa.es.js",
   "browser": "dist/viewx.vxa.umd.js",
   "web": "dist/viewx.vxa.web.js",
+  "type": "module",
   "dependencies": {
     "hoist-non-react-statics": "^3.3.2",
     "jsonx": "^1.9.1",
@@ -84,6 +85,7 @@
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.6",
     "husky": "^6.0.0",
+    "jest": "^26.6.3",
     "react-scripts": "^4.0.3",
     "rollup": "^2.45.2",
     "rollup-plugin-commonjs": "^10.1.0",
