--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "@jsonstack/jsona",
   "version": "0.7.1",
-  "main": "dist/viewx.vxa.cjs.js",
-  "module": "dist/viewx.vxa.es.js",
-  "browser": "dist/viewx.vxa.umd.js",
-  "web": "dist/viewx.vxa.web.js",
+  "main": "dist/index.cjs.js",
+  "module": "build/index.js",
+  "esm": "dist/index.esm.js",
+  "browser": "dist/index.umd.js",
+  "web": "dist/index.web.js",
+  "modules.root": "build",
   "type": "module",
   "dependencies": {
     "hoist-non-react-statics": "^3.3.2",
@@ -63,6 +65,12 @@
   "devDependencies": {
     "@commitlint/cli": "^12.1.1",
     "@commitlint/config-conventional": "^12.1.1",
+    "@rollup/plugin-alias": "3.1.2",
+    "@rollup/plugin-commonjs": "18.0.0",
+    "@rollup/plugin-node-resolve": "11.2.1",
+    "@rollup/plugin-replace": "2.4.2",
+    "@rollup/plugin-sucrase": "3.1.0",
+    "@rollup/plugin-typescript": "8.2.1",
     "@semantic-release/changelog": "5.0.1",
     "@semantic-release/commit-analyzer": "8.0.1",
     "@semantic-release/git": "9.0.0",
@@ -88,13 +96,9 @@
     "jest": "^26.6.3",
     "react-scripts": "^4.0.3",
     "rollup": "^2.45.2",
-    "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-node-builtins": "^2.1.2",
     "rollup-plugin-node-globals": "^1.4.0",
-    "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-replace": "^2.2.0",
     "rollup-plugin-terser-js": "^1.0.2",
-    "rollup-plugin-typescript": "^1.0.1",
     "ts-jest": "^26.5.5",
     "tslib": "^2.2.0",
     "typescript": "^4.2.4",
