--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "hoist-non-react-statics": "^3.3.2",
     "jsonx": "^1.9.1",
+    "luxon": "^1.26.0",
     "path-to-regexp": "^6.2.0",
     "promisie": "^3.0.1",
     "react": "^17.0.2",
