--- a/package.json
+++ b/package.json
@@ -9,19 +9,19 @@
   "modules.root": "build",
   "type": "module",
   "dependencies": {
-    "hoist-non-react-statics": "^3.3.2",
-    "jsonx": "^1.9.1",
-    "luxon": "^1.26.0",
-    "path-to-regexp": "^6.2.0",
-    "promisie": "^3.0.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-hooks-global-state": "^1.0.1",
-    "react-router": "^5.2.0",
-    "react-router-dom": "^5.2.0",
-    "simple-socket-router": "^1.0.0",
-    "store2": "^2.12.0",
-    "test-matching-route": "^2.0.0"
+    "hoist-non-react-statics": "3.3.2",
+    "jsonx": "1.9.1",
+    "luxon": "1.26.0",
+    "path-to-regexp": "6.2.0",
+    "promisie": "3.0.1",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-hooks-global-state": "1.0.1",
+    "react-router": "5.2.0",
+    "react-router-dom": "5.2.0",
+    "simple-socket-router": "1.0.0",
+    "store2": "2.12.0",
+    "test-matching-route": "2.0.0"
   },
   "scripts": {
     "watch": "rollup -cw",
@@ -64,8 +64,8 @@
     ]
   },
   "devDependencies": {
-    "@commitlint/cli": "^12.1.1",
-    "@commitlint/config-conventional": "^12.1.1",
+    "@commitlint/cli": "12.1.1",
+    "@commitlint/config-conventional": "12.1.1",
     "@rollup/plugin-alias": "3.1.2",
     "@rollup/plugin-commonjs": "18.0.0",
     "@rollup/plugin-node-resolve": "11.2.1",
@@ -77,33 +77,33 @@
     "@semantic-release/git": "9.0.0",
     "@semantic-release/npm": "7.1.1",
     "@semantic-release/release-notes-generator": "9.0.2",
-    "@testing-library/react": "^11.2.5",
-    "@types/chai": "^4.2.16",
-    "@types/enzyme": "^3.10.8",
-    "@types/enzyme-adapter-react-16": "^1.0.6",
-    "@types/hoist-non-react-statics": "^3.3.1",
-    "@types/jest": "^26.0.22",
-    "@types/luxon": "^1.26.4",
-    "@types/memory-cache": "^0.2.1",
-    "@types/numeral": "^2.0.1",
-    "@types/react-dom": "^17.0.3",
-    "@types/react-router": "^5.1.13",
-    "@types/react-router-dom": "^5.1.7",
-    "@types/ua-parser-js": "^0.7.35",
-    "chai": "^4.3.4",
-    "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.6",
-    "husky": "^6.0.0",
-    "jest": "^26.6.3",
-    "react-scripts": "^4.0.3",
-    "rollup": "^2.45.2",
-    "rollup-plugin-node-builtins": "^2.1.2",
-    "rollup-plugin-node-globals": "^1.4.0",
-    "rollup-plugin-terser-js": "^1.0.2",
-    "ts-jest": "^26.5.5",
-    "tslib": "^2.2.0",
-    "typescript": "^4.2.4",
-    "typings": "^0.6.10"
+    "@testing-library/react": "11.2.5",
+    "@types/chai": "4.2.16",
+    "@types/enzyme": "3.10.8",
+    "@types/enzyme-adapter-react-16": "1.0.6",
+    "@types/hoist-non-react-statics": "3.3.1",
+    "@types/jest": "26.0.22",
+    "@types/luxon": "1.26.4",
+    "@types/memory-cache": "0.2.1",
+    "@types/numeral": "2.0.1",
+    "@types/react-dom": "17.0.3",
+    "@types/react-router": "5.1.13",
+    "@types/react-router-dom": "5.1.7",
+    "@types/ua-parser-js": "0.7.35",
+    "chai": "4.3.4",
+    "enzyme": "3.11.0",
+    "enzyme-adapter-react-16": "1.15.6",
+    "husky": "6.0.0",
+    "jest": "26.6.3",
+    "react-scripts": "4.0.3",
+    "rollup": "2.45.2",
+    "rollup-plugin-node-builtins": "2.1.2",
+    "rollup-plugin-node-globals": "1.4.0",
+    "rollup-plugin-terser-js": "1.0.2",
+    "ts-jest": "26.5.5",
+    "tslib": "2.2.0",
+    "typescript": "4.2.4",
+    "typings": "0.6.10"
   },
   "repository": {
     "type": "git",
