--- a/package.json
+++ b/package.json
@@ -102,8 +102,7 @@
     "rollup-plugin-terser-js": "1.0.2",
     "ts-jest": "26.5.5",
     "tslib": "2.2.0",
-    "typescript": "4.2.4",
-    "typings": "0.6.10"
+    "typescript": "4.2.4"
   },
   "repository": {
     "type": "git",
