--- a/package.json
+++ b/package.json
@@ -78,12 +78,15 @@
     "@semantic-release/git": "9.0.0",
     "@semantic-release/npm": "7.1.1",
     "@semantic-release/release-notes-generator": "9.0.2",
+    "@testing-library/dom": "^7.30.4",
+    "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "11.2.6",
     "@types/chai": "4.2.17",
     "@types/enzyme": "3.10.8",
     "@types/enzyme-adapter-react-16": "1.0.6",
     "@types/hoist-non-react-statics": "3.3.1",
     "@types/jest": "26.0.23",
+    "@types/jsdom": "^16.2.10",
     "@types/luxon": "1.26.5",
     "@types/memory-cache": "0.2.1",
     "@types/numeral": "2.0.1",
@@ -96,6 +99,7 @@
     "enzyme-adapter-react-16": "1.15.6",
     "husky": "6.0.0",
     "jest": "26.6.3",
+    "jsdom": "^16.5.3",
     "react-scripts": "4.0.3",
     "rollup": "2.46.0",
     "rollup-plugin-node-builtins": "2.1.2",
