--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "modules.root": "build",
   "dependencies": {
     "hoist-non-react-statics": "3.3.2",
-    "jsonx": "^1.10.0",
+    "jsonx": "^1.10.1",
     "luxon": "1.26.0",
     "path-to-regexp": "6.2.0",
     "promisie": "3.0.1",
@@ -100,6 +100,7 @@
     "husky": "6.0.0",
     "jest": "26.6.3",
     "jsdom": "^16.5.3",
+    "puppeteer": "^9.1.1",
     "react-scripts": "4.0.3",
     "rollup": "2.47.0",
     "rollup-plugin-node-builtins": "2.1.2",
